Migrate away from some methods deprecated in Java 9
Signed-off-by: Uli Schlachter <uli.schlachter@informatik.uni-oldenburg.de>